--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert string to camelcase",
   "main": "./dist/index.js",
   "scripts": {
-    "test": "./node_modules/ava/cli.js test.js",
+    "test": "./node_modules/ava/cli.js -v test.js",
     "build": "./node_modules/distify-cli/cli.js --input-file=./index.js --output-dir=./dist",
     "prepublish": "npm run build"
   },
